service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-hello-world
